# surrealdb-path-test

./: Cargo.toml
src/: main.rs
